# Matcha-TTS-Android

./: .gitattributes  .gitignore  README.md  agent.md  matcha-fine-tuning-bilingual.ipynb  matcha-fine-tuning.ipynb  matcha-fine-tuning.tamil-only.backup.ipynb  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/kokoro/: .gitkeep
app/src/main/assets/matcha/: README.md
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/tts/: AssetUtils.kt  AudioPlayer.kt  IndicPhoneticPreprocessor.kt  MainActivity.kt  NativeTts.kt
app/src/main/jniLibs/arm64-v8a/: .gitkeep
app/src/main/res/layout/: activity_main.xml  dialog_settings.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/tts/: IndicPhoneticPreprocessorTest.kt
gradle/wrapper/: gradle-wrapper.properties
scripts/: download_kokoro_model.sh  download_matcha_model.sh  setup_sherpa_kokoro.sh
tools/: sherpa-expose-phonemes.patch
